[package]
name = "peek-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.7", features = ["luajit", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simple-logging = "2.0.2"
