[package]
name = "peek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.7", features = ["luajit", "module", "serialize"] }
peek-lib = { path = "../peek-lib" }

[lib]
crate-type = ["cdylib"]
